# multiplai-cc-mktplace

./: .gitignore  CHANGELOG.md  README.md  build-progress.md  hooks.json  marketplace.json  plugin.json
.claude-plugin/: marketplace.json  plugin.json
docs/: degradation-contract.md
hooks/: hooks.json
plugins/multiplai-dev/skills/buildme/scripts/: CLAUDE.md  README.md  pyproject.toml
plugins/multiplai-dev/skills/buildme/scripts/build_pipeline/: __init__.py  __main__.py  apply.py  change_manager.py  config.py  env.py  gates.py  migrate.py  models.py  orchestrator.py  progress.py  rubric.py  sdk.py  spec_generator.py  state.py  tdd_engine.py
plugins/multiplai-dev/skills/buildme/scripts/build_pipeline/llm_steps/: review_steps.py  spec_steps.py  tdd_steps.py
plugins/multiplai-dev/skills/buildme/scripts/build_pipeline/prompts/: design_audit.py  implementation.py  review.py  rubric_prompts.py  spec_generation.py  test_writing.py
plugins/multiplai-dev/skills/buildme/scripts/tests/: test_apply.py  test_change_manager.py  test_config.py  test_gates.py  test_migrate.py  test_models.py  test_orchestrator.py  test_review_steps.py  test_rubric.py  test_sdk.py  test_spec_generator.py  test_spec_steps.py  test_state.py  test_tdd_engine.py
plugins/multiplai-research/skills/deep-research/scripts/: CLAUDE.md  eval_effort_matrix.py  poc_concurrency_benchmark.py  poc_fetch_strategies.py  poc_sdk_cancellation.py  pyproject.toml  pyrightconfig.json
plugins/multiplai-research/skills/deep-research/scripts/research_pipeline/: __init__.py  __main__.py  claude_agent_fetcher.py  config.py  env.py  eval.py  fetcher.py  gates.py  models.py  pipeline.py  progress.py  research_types.py  sdk.py  search_router.py  state.py
plugins/multiplai-research/skills/deep-research/scripts/research_pipeline/nodes/: __init__.py  challenge.py  plan.py  quality_check.py  read.py  reassess.py  search.py  synthesize.py  triage.py  verify.py
plugins/multiplai-research/skills/deep-research/scripts/research_pipeline/prompts/: __init__.py  challenge.py  diverge.py  extract.py  map_reduce.py  plan.py  quality_check.py  reassess.py  synthesize.py  triage_relevance.py  verify.py
plugins/multiplai-research/skills/deep-research/scripts/tests/: conftest.py  test_challenge_node.py  test_challenge_wiring.py  test_claude_agent.py  test_config.py  test_env.py  test_eval.py  test_fetcher.py  test_gates.py  test_hard_timeout.py  test_pipeline_recovery.py  test_pipeline_wiring.py  test_quality_gates.py  test_sdk.py  test_search_router.py  test_state.py  test_triage.py  test_verify_node.py
scripts/: autodream.py  backfill.py  context_manager.py  context_router.py  correction-patterns.yaml  extract_learnings.py  generate_catalog.py  health_check.py  import_legacy_diary.py  (+7 more)
(+428 files in other folders)
