[project]
name = "build-pipeline"
version = "0.1.0"
description = "Deterministic build pipeline for the buildme skill ecosystem"
requires-python = ">=3.12"
dependencies = [
    "multiplai-core @ git+https://github.com/spikelab/multiplai-core@v0.6.0",
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# multiplai-core is a git direct reference (not on PyPI)
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["build_pipeline"]
