[project]
name = "build-pipeline"
version = "0.1.0"
description = "Deterministic build pipeline for the buildme skill ecosystem"
requires-python = ">=3.12"
dependencies = [
    "multiplai-core @ git+https://github.com/spikelab/multiplai-core@v0.7.0",
    # Floor + cap: 0.1.x crashed at import inside hooks (same bug class as
    # the dream 0.1.x crash); 0.2.116 is the verified floor, <0.3 guards
    # against silent breaking majors.
    "claude-agent-sdk>=0.2.116,<0.3",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# multiplai-core is a git direct reference (not on PyPI)
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["build_pipeline"]
