[project]
name = "research-pipeline"
version = "0.1.0"
description = "Deep-research pipeline for the deep-research skill"
requires-python = ">=3.12"
dependencies = [
    "multiplai-core @ git+https://github.com/spikelab/multiplai-core@v0.5.0",
    "claude-agent-sdk>=0.1.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "trafilatura>=1.6",
    "tavily-python>=0.5",
    "exa-py>=1.0",
]

[project.optional-dependencies]
# Playwright is a fallback fetch strategy (JS-rendered pages), imported lazily.
# Install with `[browser]` and run `playwright install chromium` to enable it.
browser = ["playwright>=1.40"]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# multiplai-core is a git direct reference (not on PyPI)
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["research_pipeline"]
